fix jumping

--- a/src/sass/components/search.scss
+++ b/src/sass/components/search.scss
@@ -1,9 +1,8 @@
 @use "../variables" as *;
 
 .search {
-    display: flex;
-    flex-flow: column;
     width: clamp(15rem, 20vw, 30rem);
+    position: relative;
 
     input {
         border: none;
@@ -11,11 +10,15 @@
         font: inherit;
         padding: 0.5rem 1rem;
         border-radius: 8px;
+        width: 100%;
     }
 
     &__results {
-        list-style: none;
+        position: absolute;
+        top: 100%;
+        width: calc(100% - 1rem);
         margin-inline: 0.5rem;
+        list-style: none;
         max-height: 20em;
         overflow-y: auto;
         border-radius: 0 0 8px 8px;
